feat(format): compile palette v2 to per-slot states and traits
Stages 4 to 8 of LOAD.001 exist, and traits stop being opaque. A trait payload
is now decoded by the trait that owns it, which closes three holes at once:
TRAIT.003 refuses an unregistered id with DIAG.020 and TRAIT.091's namespace
clause; MODEL.004's "at every level" finally reaches inside a payload, which was
the one level strict-key rejection did not cover; and TRAIT.009 makes a
block-valued field a node, so a satellite is resolved by stage 3 like any other.

TRAIT.090 is the contract that buys all of it. A registered trait declares its
id, its schema, which fields hold nodes and which are references into which
registry, and the generic reference check reads that declaration - so a trait
cannot be half-validated by forgetting to check its own pool, which is what the
48-name table an addon importer kept was measured doing 35-55% of the time. The
declaration is also what the resolver reads to know which subtrees to expand.

VER.016 retires with a tombstone, and REF.022's narrower check was written
first: no trait declares an operand as a key, so a $ref on a trait object is
DIAG.003 against the trait's own key set, while a satellite may carry one and
now does. DIAG.064 is retired to a dash beside DIAG.042 and DIAG.062.

Traits flow down alternative edges and not down satellite ones (TRAIT.005 to
TRAIT.007). The test for the non-termination case is the first in TraitTest: an
unlit satellite must not inherit urbex:light, or it is an optional light whose
replacement is an optional light, forever.

The compiled form is one array of (state, traits) per slot rather than the two
parallel arrays the brief named - two arrays are two lookups, which LOAD.022
forbids, and a method building a pair is an allocation, which LOAD.040 forbids.
Markers are remapped through a two-level page table, so a non-ASCII marker costs
two array reads exactly as an ASCII one does (CHAR.030): the sweep that produced
162 non-ASCII marke